<resources>
    <string name="app_name">LenguagesApp</string>
    <string name="hint_user_login">Username</string>
    <string name="hint_pass_login">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_singup">Register</string>
    <string name="hint_mail">Email Address</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="name_app">OkeyListen</string>
    <string name="desc_img_logo">Imagen del logo de la app</string>
    <string name="empty_email">El email no puede estar vacío</string>
    <string name="empty_pass">La contraseña no puede estar vacía</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="title_dialog_register">REGISTRO</string>
    <string name="text_dialog_register">Por favor, completa todos los campos</string>
    <string name="img_mail1_login">Icono representando un sobre</string>
    <string name="img_user_login">Icono representando una persona</string>
    <string name="img_pass_login">Icono representando un candado</string>
    <string name="img_mobile_login">Icono representando un teléfono</string>
    <string name="texto_login">El conocimiento de idiomas es la puerta a la sabiduría</string>
</resources>