<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city2">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/et_mail_registre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:autofillHints=""
                    android:background="#00000000"
                    android:hint="@string/hint_mail"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/et_user_registre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:autofillHints=""
                    android:background="#00000000"
                    android:hint="@string/hint_user_login"
                    android:inputType="text"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/et_pass_registre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/hint_pass_login"
                    android:inputType="textPassword"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/border"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/mobile" />

                <EditText
                    android:id="@+id/et_mobile_registre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/hint_mobile"
                    android:inputType="number"
                    android:letterSpacing="0.1"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#5fff"></LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/Registre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/btn_singup"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/loginInf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=" El conocimiento de idiomas es la puerta a la sabiduría"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="550dp"/>
</RelativeLayout>
